Add conexão mysql e novas dependências

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=api
+spring.application.name=kimura-api
+
+spring.datasource.url=jdbc:mysql://localhost/kimura_api
+spring.datasource.username=root
+spring.datasource.password=root
