--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=kimura-api
 spring.datasource.url=jdbc:mysql://localhost/kimura_api
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
